# mrs_project_container

./: README.md  ad_start.sh  build.sh  build_and_setup_wf.sh  clean.sh  common.sh  my_autodrive_devkit.sh  reset.sh  run.sh  run_wf.sh  set_initialpose.sh  setup.sh
config/: with_map.rviz
jazzy_nav2_mppi_controller/: CMakeLists.txt
maps/: race1.pgm  race1.yaml  track1.pgm  track1.yaml
my_car/: CMakeLists.txt  package.xml
my_car/behavior_trees/: minimal.xml  planner_controller_pipe.xml
my_car/behavior_trees_plugins/: bt_plugin.xml
my_car/config/: mapper_params_online_async.yaml  minimal_nav2_params.yaml  nav2_params.yaml  nav2_params_changed.yaml  nav2_params_no_amcl.yaml  planner_controller_nav2_params.yaml
my_car/config/secondary/: mapper_params_online_async.yaml
my_car/include/my_car/: debug_logger.hpp
my_car/launch/: bridge.launch.xml  bridge_rviz.launch.xml  minimal_navigation_launch.py  my_nav2_bringup_launch.py  my_nav2_localization_launch.py  my_nav2_navigation_launch.py  nav2.launch.xml  nav2_rviz_bridge.launch.xml  rviz.launch.xml  rviz_bridge.launch.xml  rviz_nav2_sim_bringup.launch.xml  rviz_sim_bringup.launch.xml  sim_bringup_rviz.launch.xml  slam.launch.xml  slam_rviz_bridge.launch.xml  wf_slam_rviz_sim_bringup.launch.xml
my_car/launch/secondary/: slam.launch.xml  slam_rviz_bridge.launch.xml  wf.launch.xml
my_car/maps/: practice_1.pgm  practice_1_world_as_odom.yaml  practice_2_w_as_o.pgm  practice_2_w_as_o.yaml  practice_2_w_as_o_centerline.csv  practice_2_w_as_o_centerline_manual.csv  practice_2_w_as_o_centerline_manual_2.csv  practice_2_w_as_o_ref_center.csv  practice_world_as_odom.pgm  practice_world_as_odom.yaml  traj_race_cl.csv
my_car/maps/old/: practice_1.yaml
my_car/rviz/: bridge_default.rviz  minimal_nav2.rviz  nav2.rviz  nav2_amcl.rviz  nav2_default.rviz  slam.rviz
my_car/rviz/secondary/: nav2_all.rviz  slam.rviz
my_car/src/: debug_logger.cpp  initial_pose_publisher.cpp  odometry_node.cpp  path_publisher.cpp  tf_relay_lib.cpp  tf_relay_node.cpp  update_plan_from_topic.cpp  velocity_control_node.cpp
nav2_bt_navigator/: CMakeLists.txt
nav2_bt_navigator/include/nav2_bt_navigator/: bt_navigator.hpp  navigator.hpp
nav2_bt_navigator/include/nav2_bt_navigator/navigators/: navigate_to_pose.hpp
nav2_bt_navigator/src/: bt_navigator.cpp
nav2_bt_navigator/src/navigators/: navigate_to_pose.cpp
nav2_mppi_controller/: CMakeLists.txt  package.xml
nav2_mppi_controller/include/nav2_mppi_controller/: controller.hpp  mppi_debug_logger.hpp  optimizer.hpp
nav2_mppi_controller/include/nav2_mppi_controller/critics/: cost_critic.hpp  obstacles_critic.hpp  path_angle_critic.hpp
nav2_mppi_controller/include/nav2_mppi_controller/tools/: path_handler.hpp  trajectory_visualizer.hpp
nav2_mppi_controller/src/: controller.cpp  debug_logger.cpp  mppi_debug_logger.cpp  optimizer.cpp  path_handler.cpp  trajectory_visualizer.cpp
nav2_mppi_controller/src/critics/: cost_critic.cpp  obstacles_critic.cpp  path_angle_critic.cpp
scripts/: ad_start.sh  ad_start_headless.sh  baseline_creator.py  baseline_creator_2.py  build.sh  headless_bridge.sh  kill_run.sh  plot_low_level_controller_debug.py  reset.sh  set_initialpose.sh  slam_centerline_generator.py  stop.sh  stop_and_reset.sh  stop_reset_and_kill.sh  visualize_centerline.py
wall_follow/: CMakeLists.txt  package.xml
wall_follow/launch/: sim_bridge_plus_rviz_plus_slam.launch.xml  wall_follow_launch.xml
wall_follow/src/: wall_follow_node.cpp
